k8s/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: avidboard
  labels:
    name: avidboard
