k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-avidboard
  namespace: avidboard
spec:
  rules:
    - host: dev.master
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: avidboard-web
                port:
                  number: 3000
          - path: /api/accounts/
            pathType: Prefix
            backend:
              service:
                name: avidboard-accounts
                port:
                  number: 5000
          - path: /api/kanban/
            pathType: Prefix
            backend:
              service:
                name: avidboard-kanban
                port:
                  number: 8000
